# AgenticBlogger

./: .gitignore  Navigating_the_AI_Startup_Funding_Boom_Trends_and_Insights_from_2024_to_2026.md  README.md  Understanding the Self-Attention Mechanism in Transformers.md  graph.ipynb  main.py  pyproject.toml  requirements.txt  test.py  test_ui.html  the_future_of_ai_in_healthcare.md
core/: agent.ipynb  agent.py
core/controller/: auth_controller.py  controller.py
core/helper/: is_auth_fun.py
core/models/: models.py  response_model.py
core/nodes/: fanout.py  generate_img.py  human_approval.py  notion_publisher.py  orchestrator.py  reducer.py  research_node.py  router_node.py  worker.py
core/router/: router.py
core/storage/: storage.py
utils/: const.py  llm_config.py
