[project]
name = "agenticblogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.4",
    "langchain==1.2.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph==1.0.8",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.22",
    "uvicorn==0.40.0",
]
