[project]
name = "agenticblogger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.4",
    "google>=3.0.0",
    "google-genai>=1.65.0",
    "langchain==1.2.9",
    "langchain-community==0.4.1",
    "langchain-core==1.2.16",
    "langchain-openai==1.1.10",
    "langgraph==1.0.8",
    "openai==2.24.0",
    "pwdlib>=0.3.0",
    "pyjwt==2.12.1",
    "pymongo[srv]>=4.16.0",
    "pyppeteer>=0.0.25",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.22",
    "uvicorn==0.40.0",
]
